// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`size renders 0 1`] = `
Array [
  .c0 {
  size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  size: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`size renders function 1`] = `
Array [
  .c0 {
  size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  size: has;
}

<div
    className="c0"
  />,
  .c0 {
  size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  size: has;
}

<div
    className="c0"
  />,
]
`;

exports[`size renders invalid theme path 1`] = `
Array [
  .c0 {
  size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  size: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`size renders negative number 1`] = `
Array [
  .c0 {
  size: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  size: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  size: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  size: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`size renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    size: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    size: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`size renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    size: July;
  }
}

@media April {
  .c0 {
    size: August;
  }
}

@media January {
  .c0 {
    size: September;
  }
}

@media April {
  .c0 {
    size: November;
  }
}

@media June {
  .c0 {
    size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    size: July;
  }
}

@media April {
  .c0 {
    size: August;
  }
}

@media January {
  .c0 {
    size: September;
  }
}

@media April {
  .c0 {
    size: November;
  }
}

@media June {
  .c0 {
    size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    size: January;
  }
}

@media April {
  .c0 {
    size: December;
  }
}

@media January {
  .c0 {
    size: April;
  }
}

@media April {
  .c0 {
    size: May;
  }
}

@media June {
  .c0 {
    size: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    size: January;
  }
}

@media April {
  .c0 {
    size: December;
  }
}

@media January {
  .c0 {
    size: April;
  }
}

@media April {
  .c0 {
    size: May;
  }
}

@media June {
  .c0 {
    size: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`size renders postitive number 1`] = `
Array [
  .c0 {
  size: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  size: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  size: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  size: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`size renders string 1`] = `
Array [
  .c0 {
  size: July;
}

<div
    className="c0"
  />,
  .c0 {
  size: July;
}

<div
    className="c0"
  />,
  .c0 {
  size: June;
}

<div
    className="c0"
  />,
  .c0 {
  size: June;
}

<div
    className="c0"
  />,
]
`;

exports[`size renders valid theme path 1`] = `
Array [
  .c0 {
  size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  size: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
